objects/Tipo_de_Documento__c.object
<CustomObject>
    <description>Onda 02 Projeto - Objeto para controlar os tipos de documentos do JDE, associados as Cláusulas.</description>
    <fields>
        <fullName>CodigoDocumento__c</fullName>
        <formula>Codigo_do_Documento__r.CodDefUsuario__c</formula>
        <label>Código do Documento</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Codigo_do_Documento__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Nome do Documento</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>UDC__c.CodProd__c</field>
                <operation>equals</operation>
                <value>00</value>
            </filterItems>
            <filterItems>
                <field>UDC__c.CodUs__c</field>
                <operation>equals</operation>
                <value>DT</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>UDC__c</referenceTo>
        <relationshipLabel>Tipos de Documentos</relationshipLabel>
        <relationshipName>Tipos_de_Documentos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAT_Contract__c</fullName>
        <label>BR Contrato</label>
        <referenceTo>LAT_Contract__c</referenceTo>
        <relationshipLabel>Tipos de Documentos</relationshipLabel>
        <relationshipName>Tipos_de_Documentos</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Tipo de Documento</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Tudo</label>
    </listViews>
    <nameField>
        <displayFormat>Doc-{000000000}</displayFormat>
        <label>Tipo de Documento</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tipos de Documentos</pluralLabel>
    <recordTypes>
        <fullName>Tipo_de_Documento</fullName>
        <active>true</active>
        <label>Tipo de Documento</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Nao_permitir_inserir_registros</fullName>
        <active>true</active>
        <description>Não permitir inserir registros quando o contrato estiver em aprovação ou ativo</description>
        <errorConditionFormula>AND(
ISPICKVAL(LAT_Contract__r.Status__c , &quot;Ativo&quot;))   || 

AND(
ISPICKVAL(LAT_Contract__r.Status__c , &quot;Em aprovação&quot;))</errorConditionFormula>
        <errorMessage>Não é possível Inserir/editar registros com o status do contrato = Ativo ou Em Aprovação</errorMessage>
    </validationRules>
</CustomObject>